--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,30 @@
     width: 70%;
     margin: 100px auto;
     justify-content: center;
-    background-color: red;
 }
 
 .item-section-promo {
     width: 30%;
     height: 100px;
     background-color: green;
+}
+
+.container-nav{
+    margin: auto 30px;
+}
+
+.container-nav ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.container-nav ul li{
+    padding: 5px 10px;
+}
+
+.container-nav ul li a{
+    text-decoration: none;
+    color:black;
+    size: 18px;
 }
