--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,30 @@
     height: 100px;
     background-color: green;
 }
+
+.container-lorem{
+    background-color: wheat;
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.container-lorem div{
+    margin: 15px;
+    width: 45%;
+    padding: 5px;
+}
+
+.container-lorem div h2{
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container-lorem div p{
+    text-align: justify;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
