--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
     text-decoration: none;
     color:black;
     size: 18px;
-
+}
 .container-imagen{
     display: flex;
     flex-direction: column;
